--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: cs9
 Title: A Framework for Real-time Analysis and Disease Surveillance
-Version: 9.0.2
+Version: 25.7.31
 Authors@R: c(
   person(c("Richard","Aubrey"), "White", email = "hello@rwhite.no", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-6747-1726")
   ),
   person("CSIDS", email = "hello@csids.no", role = c("cph"))
   )
-Description: The generic infrastructure that can be used to implement new real-time analysis and disease surveillance systems.
+Description: A comprehensive framework for building real-time disease surveillance systems. Provides R6-based infrastructure for database-driven surveillance tasks, with support for parallel processing, data validation, and automated pipeline execution. Designed for epidemiological analysis and public health monitoring applications.
 URL: https://www.csids.no/cs9/, https://github.com/csids/cs9
 BugReports: https://github.com/csids/cs9/issues
 Depends:
