Improve system environment configuration handling
- Add comprehensive error handling in .onLoad() function
- Wrap database operations in tryCatch with informative messages
- Make database connection optional - package loads with limited functionality when DB unavailable
- Add fallback defaults for missing environment variables
- Extract database table setup into separate function for better modularity
- Add check_environment_setup() diagnostic function for troubleshooting
- Provide clear user guidance when configuration issues occur

These improvements make CS9 more robust in environments where full database
configuration may not be available, while maintaining backward compatibility.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(collect,sc_tbl_v8)
 export("%>%")
 export(SurveillanceSystem_v9)
+export(check_environment_setup)
 export(config)
 export(create_folder_if_doesnt_exist)
 export(create_latest_folder)
