--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,9 @@
 Package: cs9
-Title: A Framework for Real-time Analysis and Disease Surveillance
+Title: A Framework for Real-Time Analysis and Disease Surveillance
 Version: 25.7.31
+Author: Richard Aubrey White [aut, cre] (<https://orcid.org/0000-0002-6747-1726>),
+  CSIDS [cph]
+Maintainer: Richard Aubrey White <hello@rwhite.no>
 Authors@R: c(
   person(c("Richard","Aubrey"), "White", email = "hello@rwhite.no", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-6747-1726")
@@ -33,7 +36,7 @@ Suggests:
     knitr,
     usethis,
     rmarkdown,
-    fhiplot
+    csstyle
 License: MIT + file LICENSE
 LazyData: true
 Roxygen: list(markdown = TRUE)
