--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,7 +1,4 @@
-url: https://www.csids.no/cs9/
-
-template:
-  package: csidstemplatepkgdown
+url: https://niphr.github.io/cs9/
 
 articles:
 - title: Main verbs
@@ -54,3 +51,13 @@ reference:
   contents:
   - "%>%"
 
+authors:
+  footer:
+    roles: [cre, aut]
+    text: "Crafted by"
+  sidebar:
+    roles: [cre, aut, cph]
+  before: "This package is proudly brought to you by:"
+  after: "See the [changelog](news/index.html) for other contributors. :pray:"
+  Richard Aubrey White:
+    href: "https://www.rwhite.no"
